cif/org.eclipse.escet.cif.tests/tests/checks/SvgInNoUpdatesCheck.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  --------------------------------------
  (1/1) SVG input mapping has an update.
  --------------------------------------
   * In the top-level scope of the specification:
     - svgin id "abc" do i := true;
                           ^
     - svgin id "svg" do z := 3;
                           ^
